RESOLVED FIXED Bug 151620
Fix the ENABLE(B3_JIT) build with GCC in B3Procedure.h
https://bugs.webkit.org/show_bug.cgi?id=151620
Summary Fix the ENABLE(B3_JIT) build with GCC in B3Procedure.h
Csaba Osztrogonác
Reported 2015-11-26 05:35:36 PST
build log: ----------- In file included from /usr/include/c++/4.9/memory:81:0, from ../../Source/WTF/wtf/StdLibExtras.h:31, from ../../Source/WTF/wtf/FastMalloc.h:26, from ../../Source/JavaScriptCore/config.h:54, from ../../Source/JavaScriptCore/b3/B3LowerMacros.cpp:26: /usr/include/c++/4.9/bits/unique_ptr.h: In instantiation of 'void std::default_delete<_Tp>::operator()(_Tp*) const [with _Tp = JSC::B3::OpaqueByproducts]': /usr/include/c++/4.9/bits/unique_ptr.h:236:16: required from 'std::unique_ptr<_Tp, _Dp>::~unique_ptr() [with _Tp = JSC::B3::OpaqueByproducts; _Dp = std::default_delete<JSC::B3::OpaqueByproducts>]' ../../Source/JavaScriptCore/b3/B3Procedure.h:222:87: required from here /usr/include/c++/4.9/bits/unique_ptr.h:74:22: error: invalid application of 'sizeof' to incomplete type 'JSC::B3::OpaqueByproducts' ninja: build stopped: subcommand failed.
Attachments
Patch (1.22 KB, patch)
2015-11-26 05:38 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-11-26 05:38:40 PST
Mark Lam
Comment 2 2015-11-26 06:50:25 PST
Comment on attachment 266180 [details] Patch I don't see any use of OpaqueByproducts in B3Procedure.h other than as a pointer. Which files are failing to build without this change? Should they be #including B3OpaqueByproducts.h themselves?
Csaba Osztrogonác
Comment 3 2015-11-26 07:03:34 PST
(In reply to comment #2) > Comment on attachment 266180 [details] > Patch > > I don't see any use of OpaqueByproducts in B3Procedure.h other than as a > pointer. Which files are failing to build without this change? Should they > be #including B3OpaqueByproducts.h themselves? I got the cited error for almost all cpp files. I don't think if we should include this header everywhere explicitly.
Mark Lam
Comment 4 2015-11-26 07:04:35 PST
Comment on attachment 266180 [details] Patch r=me
WebKit Commit Bot
Comment 5 2015-11-27 05:01:31 PST
Comment on attachment 266180 [details] Patch Clearing flags on attachment: 266180 Committed r192777: <http://trac.webkit.org/changeset/192777>
WebKit Commit Bot
Comment 6 2015-11-27 05:01:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.