Fix the ENABLE(B3_JIT) build with GCC in B3Procedure.h https://bugs.webkit.org/show_bug.cgi?id=151620

Reviewed by Mark Lam.

* b3/B3Procedure.h:


Canonical link: https://commits.webkit.org/169738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192777 268f45cc-cd09-0410-ab3c-d52691b4dbfc